unpackaged/main/default/objects/litify_ext__Matter_Sharing_Setting__mdt/litify_ext__Matter_Sharing_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Matter Sharing Setting</label>
    <pluralLabel>Matter Sharing Settings</pluralLabel>
</CustomObject>