unpackaged/main/default/objects/litify_ext__Matter_Sharing_Setting__mdt/fields/litify_ext__Object_Name__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Object_Name__c</fullName>
    <label>Object Name</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Matter_Sharing_Settings</relationshipLabel>
    <relationshipName>Matter_Sharing_Settings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>