unpackaged/main/default/objects/litify_ext__Matter_Sharing_Setting__mdt/fields/litify_ext__Private_Field__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Private_Field__c</fullName>
    <label>Private Field</label>
    <metadataRelationshipControllingField>litify_ext__Matter_Sharing_Setting__mdt.litify_ext__Object_Name__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Matter_Sharing_Settings1</relationshipLabel>
    <relationshipName>Matter_Sharing_Settings1</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>